fixed horizontal scroll and tried to add image

--- a/css/generalstyles.css
+++ b/css/generalstyles.css
@@ -18,10 +18,16 @@
 .menubar {
   height: 20px;
   width: 140px;
-  float: right;
-  margin: 30px 30px 0px 0px;
+  position: fixed;
+  right: 30px;
+  top: 30px;
 }
 
-.intro {
-  height: 100vh;
+.menucircle {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  position: fixed;
+  right: 190px;
+  top: 25px;
 }
